np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2023-09-29T09:58:05Z"
  generation: 3
  name: allow-apigw1-egress
  namespace: krakendtest
  ownerReferences:
  - apiVersion: krakend.nais.io/v1
    kind: Krakend
    name: apigw1
    uid: a9b260c8-42cb-4337-9ea2-03a13bff4559
  resourceVersion: "1140864498"
  uid: 0ca3c075-e90e-46a4-890b-5e716b311300
spec:
  egress:
  - ports:
    - port: 443
      protocol: TCP
    to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.6.0.0/15
        - 172.16.0.0/12
        - 192.168.0.0/16
  - ports:
    - port: 80
      protocol: TCP
    to:
    - namespaceSelector: {}
  podSelector:
    matchLabels:
      app.kubernetes.io/name: krakend
  policyTypes:
  - Egress
